fixed spacing/color bugs

--- a/app/public/assets/css/art.css
+++ b/app/public/assets/css/art.css
@@ -361,7 +361,7 @@ margin-top: 6%;
     margin-right: auto;
 }
 .emailTease {
-    margin-top: -2%;
+    margin-top: -3%;
 }
 #desjardinsModal,
 #lewisModal,
