--- a/app/public/assets/css/responsive.css
+++ b/app/public/assets/css/responsive.css
@@ -309,7 +309,7 @@
         margin-top: 15%;
         padding: 5%;
         margin: 5%;
-        border: 5px solid grey;
+        border: 5px solid lightgrey;
     }
     .eventInvitation {
         margin-top: 10%;
